--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "homepage": "http://drupal.org/project/commerce_2checkout",
   "license": "GPL-2.0+",
   "require": {
-    "drupal/commerce": "~2"
+    "drupal/commerce": "~2",
+    "2checkout/2checkout-php": "~0.3"
   }
 }
